Tous les elements codés, reste responsive et MeP

--- a/V1/index.html
+++ b/V1/index.html
@@ -138,18 +138,72 @@
                     <div class="ColorBlue"><i class="fa-solid fa-chart-line"></i></div>
                 </div>
                 <div class="contenuPop flexBetween alignCenter column">
-                    <div class ="cartePop backgroundWhite flexCenter row roundedBorderAll">
-                        <div class="photoPop roundedBorderleft"><img src="images/ </div>
-                        <div class="infoPop"></div>
+                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
+                        <div class="imgPop"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
+                        <div class="popInfos flexStart column">
+                            <div class ="popTitre"><h3>Auberge de Cannebière</h3></div>
+                            <div class ="popPrix"><p>Nuit à partir de 25e</p></div>
+                            <div class="popEtoiles">etoiles</div>
+                        </div>
                     </div>
-                    <div class ="cartePop backgroundWhite flexCenter row roundedBorderAll"></div>
-                    <div class ="cartePop backgroundWhite flexCenter row roundedBorderAll"></div>
-                </div>
-
-
-
+                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
+                        <div class="imgPop"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
+                        <div class="popInfos flexStart column">
+                            <div class ="popTitre"><h3>Auberge de Cannebière</h3></div>
+                            <div class ="popPrix"><p>Nuit à partir de 25e</p></div>
+                            <div class="popEtoiles">etoiles</div>
+                        </div>
+                    </div>
+                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
+                        <div class="imgPop"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
+                        <div class="popInfos flexStart column">
+                            <div class ="popTitre"><h3>Auberge de Cannebière</h3></div>
+                            <div class ="popPrix"><p>Nuit à partir de 25e</p></div>
+                            <div class="popEtoiles">etoiles</div>
+                        </div>
+                    </div>
+                </div>0
             </div>
         </section>
+        <section>
+            <h3>Activités à Marseille</h3>
+            <div class="activité flexBetween alignStart DirVariable">
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+                <div class="imgAct"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
+                <div class="actTitre"><h4>Vieux-Port</h4></div>
+            </div>
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+                <div class="imgAct"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
+                <div class="actTitre"><h4>Vieux-Port</h4></div>
+            </div>
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+                <div class="imgAct"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
+                <div class="actTitre"><h4>Vieux-Port</h4></div>
+            </div>
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+                <div class="imgAct"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
+                <div class="actTitre"><h4>Vieux-Port</h4></div>
+            </div>
+            </div>
+        </section>
+        <footer class="flexAround DirVariable flexAround backgroundgrey">
+            <div class="infoFoot column">
+                <h6>A propos</h6>
+                <p>Fonctionnement du site</p>
+                <p>Conditions générales</p>
+                <p>Données et confidentialité</p>
+            </div>
+            <div>
+                <h6>Nos hebergements</h6>
+                <p>Charte qualité</p>
+                <p>Proposer votre hotel</p>
+            </div>
+            <div>
+                <h6>Assistance</h6>
+                <p>Centre d'aide</p>
+                <p>Nous contacter</p>
+            </div>
+        </footer>
     </body>
 
 </html>
