--- a/V1/index.html
+++ b/V1/index.html
@@ -3,24 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Booki</title>
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="css/style-desktop.css">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 480px) and (max-width: 767px)" href="css/style-tablette.css">
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 479px)" href="css/style-mobile.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <script src="https://kit.fontawesome.com/0601797f3e.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="flexBetween DirVariable margin padding">
+        <header class="flexBetween DirVariable">
             <div> 
             <img src="images/logo/Booki.png" alt="logo" class="logo"/>
             </div>
             <div>
-            <nav class="flexBetween row margin padding">
+            <nav class="flexBetween row ">
                 <div>
-                    <a href="hebergement.html" class="lien margin padding">Hébergements
+                    <a href="hebergement.html" class="lien">Hébergements
                     </a>
                 </div>
                 <div>
-                    <a href="activités.html"  class="lien margin padding">Activités
+                    <a href="activités.html"  class="lien">Activités
                     </a></div>
             </nav>
             </div>
