--- a/V1/index.html
+++ b/V1/index.html
@@ -15,32 +15,30 @@
             <div> 
             <img src="images/logo/Booki.png" alt="logo" class="logo"/>
             </div>
-            <div>
             <nav class="flexBetween row ">
                 <div>
-                    <a href="hebergement.html" class="lien">Hébergements
+                    <a href="hebergement.html" class="lien flexCenter alignCenter">Hébergements
                     </a>
                 </div>
                 <div>
-                    <a href="activités.html"  class="lien">Activités
+                    <a href="activités.html"  class="lien flexCenter alignCenter">Activités
                     </a></div>
             </nav>
-            </div>
         </header>
-        <div class="flex sectionRecherche column">
+        <div class="flex alignStart column">
             <div>
                 <h4>Trouvez votre hébergement pour des vacances de rêve</h4>
                 <p>En plein centre-ville ou en pleine nature</p>
             </div>
-            <div class="flex sectionRecherche row padding margin">
+            <div class="flex alignStart row padding margin">
                 <div class="backgroundgrey roundedBorderleft ColorBlue padding">
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
-                <div><input type="search" placeholder="Marseille, France"></div>
+                <div><input type="search" placeholder="Marseille, France" class="search"></div>
             <div class="roundedBorderRight backgroundblue padding">Rechercher</div>
             </div>
         </div>
-        <div class=" flex sectionRecherche row">
+        <div class=" flex alignCenter row">
             <div><h1>Filtres</h1></div>
             <div class=" flexCenter roundedBorderAll solidBorder row padding alignCenter">
                 <div>
