réu pré mentorat, barrre de recherche et police

--- a/V1/index.html
+++ b/V1/index.html
@@ -17,18 +17,18 @@
             </div>
             <nav class="flexBetween row ">
                 <div>
-                    <a href="hebergement.html" class="lien flexCenter alignCenter">Hébergements
+                    <a href="hebergement.html" class="lien flexCenter alignCenter styleText3">Hébergements
                     </a>
                 </div>
                 <div>
-                    <a href="activités.html"  class="lien flexCenter alignCenter">Activités
+                    <a href="activités.html"  class="lien flexCenter alignCenter styleText3">Activités
                     </a></div>
             </nav>
         </header>
         <div class="flex alignStart column">
             <div>
-                <h4>Trouvez votre hébergement pour des vacances de rêve</h4>
-                <p>En plein centre-ville ou en pleine nature</p>
+                <h4 class="styleText1">Trouvez votre hébergement pour des vacances de rêve</h4>
+                <p class="styleText3">En plein centre-ville ou en pleine nature</p>
             </div>
             <div class="flex alignStart row padding margin">
                 <div class="backgroundgrey roundedBorderleft ColorBlue padding">
