cartes act à verifier, &Mep resp

--- a/V1/index.html
+++ b/V1/index.html
@@ -78,12 +78,12 @@
         </div>
         <section>
             <div class="sizeHebergements column backgroundgrey roundedBorderAll">
-                <h2>Hébergements à Marseille</h2>
+                <div  class="enTeteHeb"><h2>Hébergements à Marseille</h2></div>
                 <div class="contenuHeb flexAround alignCenter DirVariable ">
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
+                    <div class="carteHeb flexCenter column backgroundWhite roundedBorderAll">
                         <div class="imgHebergements"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
-                            <div class ="hebTitre"><h3>Auberge de Cannebière</h3></div>
+                            <div class ="hebTitre"><h3>Auberge de la cannebière</h3></div>
                             <div class ="hebPrix"><p>Nuit à partir de 25e</p></div>
                             <div class="hebEtoiles row"><i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
@@ -92,7 +92,7 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
+                    <div class="carteHeb flexCenter column backgroundWhite roundedBorderAll">
                         <div class="imgHebergements"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
                             <div class ="hebTitre"><h3>Hotel du port</h3></div>
@@ -104,7 +104,7 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
+                    <div class="carteHeb flexCenter column backgroundWhite roundedBorderAll">
                         <div class="imgHebergements"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
                             <div class ="hebTitre"><h3>Hôtel les mouettes</h3></div>
@@ -117,9 +117,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="contenuHeb flexAround alignCenter DirVariable">
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
-                        <div class="imgHebergements"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
+                <div class="contenuHeb alignCenter flexAround DirVariable">
+                    <div class="carteHeb flexCenter column backgroundWhite roundedBorderAll">
+                        <div class="imgHebergements "><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
                             <div class ="hebTitre"><h3>Hôtel de la mer</h3></div>
                             <div class ="hebPrix"><p>Nuit à partir de 46e</p></div>
@@ -130,7 +130,7 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
+                    <div class="carteHeb flexCenter column backgroundWhite roundedBorderAll">
                         <div class="imgHebergements"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
                             <div class ="hebTitre"><h3>Auberge Le Panier</h3></div>
@@ -142,7 +142,7 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="carteHeb flexCenter column alignCenter backgroundWhite roundedBorderAll">
+                    <div class="carteHeb flexCenter column  backgroundWhite roundedBorderAll">
                         <div class="imgHebergements"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photos roundedBorderTop"/></div>
                         <div class="hebInfos flexStart column">
                             <div class ="hebTitre"><h3>Hôtel chez Amina</h3></div>
@@ -158,16 +158,16 @@
                     <h4>Afficher plus</h4>
                 </div>
             <div class ="sizePopulaire column roundedBorderAll backgroundgrey">
-                <div class="flexBetween row">
+                <div class="flexBetween row enTetePop">
                     <div><h2>Les plus populaires</h2></div>
                     <div class="ColorBlue alignCenter flexCenter"><i class="fa-solid fa-chart-line"></i></div>
                 </div>
-                <div class="contenuPop flexCenter alignCenter">
-                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
-                        <div class="imgPop"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
-                        <div class="popInfos flexStart column">
-                            <div class ="popTitre"><h3>Hôtel le soleil du matin</h3></div>
-                            <div class ="popPrix"><p>Nuit à partir de 128e</p></div>
+                <div class="contenuPop flexStart alignCenter">
+                    <div class="cartePop flexStart row backgroundWhite roundedBorderAll">
+                        <div class="imgPop"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft flexCenter"/></div>
+                        <div class="popInfos flexBetween column">
+                            <div><h3>Hôtel le soleil du matin</h3>
+                                <p>Nuit à partir de 128e</p></div>
                             <div class="hebEtoiles row"><i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
@@ -175,11 +175,11 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
-                        <div class="imgPop"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
-                        <div class="popInfos flexStart column">
-                            <div class ="popTitre"><h3>Chambres d'hotes au coeur de l'eau</h3></div>
-                            <div class ="popPrix"><p>Nuit à partir de 71e</p></div>
+                    <div class="cartePop flexStart row backgroundWhite roundedBorderAll">
+                        <div class="imgPop"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"></div>
+                        <div class="popInfos flexBetween column">
+                            <div><h3>Chambres d'hotes au coeur de l'eau</h3>
+                            <p>Nuit à partir de 71e</p></div>
                             <div class="hebEtoiles row"><i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
@@ -187,11 +187,11 @@
                                 <i class="fa-solid fa-star colorGrey "></i></div>
                         </div>
                     </div>
-                    <div class="cartePop flexCenter row alignCenter backgroundWhite roundedBorderAll">
+                    <div class="cartePop flexStart row backgroundWhite roundedBorderAll">
                         <div class="imgPop"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="annie-spratt-Eg1qcIitAuA-unsplash" class="photosPop roundedBorderleft"/></div>
-                        <div class="popInfos flexStart column">
-                            <div class ="popTitre"><h3>Hôtel bleu et blanc</h3></div>
-                            <div class ="popPrix"><p>Nuit à partir de 68e</p></div>
+                        <div class="popInfos flexBetween column">
+                            <div><h3>Hôtel bleu et blanc</h3>
+                            <p>Nuit à partir de 68e</p></div>
                             <div class="hebEtoiles row"><i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
                                 <i class="fa-solid fa-star ColorBlue"></i>
@@ -203,21 +203,21 @@
             </div>
         </section>
         <div class="divAct flexCenter column">
-            <h3>Activités à Marseille</h3>
+            <h4>Activités à Marseille</h4>
             <div class="activité flexBetween aligncenter DirVariable">
-            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll">
                 <div class="imgAct"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
                 <div class="actTitre"><h4>Vieux-Port</h4></div>
             </div>
-            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll">
                 <div class="imgAct"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
                 <div class="actTitre"><h4>Fort de Pomègues</h4></div>
             </div>
-            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll">
                 <div class="imgAct"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
                 <div class="actTitre"><h4>Parc national des calanques</h4></div>
             </div>
-            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll solidBorder">
+            <div class="activCarte flexBetween VariableColumn flexStart roundedBorderAll">
                 <div class="imgAct"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="photosAct roundedBorderTop"/></div>
                 <div class="actTitre"><h4>Notre-Dame-de-la-Garde</h4></div>
             </div>
@@ -226,19 +226,19 @@
         <footer class="flexAround DirVariable flexAround backgroundgrey">
             <div class="infoFoot column">
                 <h6>A propos</h6>
-                <p>Fonctionnement du site</p>
-                <p>Conditions générales</p>
-                <p>Données et confidentialité</p>
+                <p class="Pfoot">Fonctionnement du site</p>
+                <p class="Pfoot">Conditions générales</p>
+                <p class="Pfoot">Données et confidentialité</p>
             </div>
             <div>
                 <h6>Nos hebergements</h6>
-                <p>Charte qualité</p>
-                <p>Proposer votre hotel</p>
+                <p class="Pfoot">Charte qualité</p>
+                <p class="Pfoot">Proposer votre hotel</p>
             </div>
             <div>
                 <h6>Assistance</h6>
-                <p>Centre d'aide</p>
-                <p>Nous contacter</p>
+                <p class="Pfoot">Centre d'aide</p>
+                <p class="Pfoot">Nous contacter</p>
             </div>
         </footer>
     </body>
